#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-39
2015-05-11 Mikhail S. Dubrovin	
- in GeometryObject - delete allocated memory for all non-top objects (PSAS-147).

Tag: V00-02-38
2015-05-11 Mikhail S. Dubrovin	
- In SegGeometryStore use SegGeometryCspad2x1V1 and SegGeometryEpix100V1 as singletons to reduce memory consumption (PSAS-147)
	
Tag: V00-02-37
2015-04-09 Mikhail S. Dubrovin	
- in *.py replace !=None -> is not None, ==None -> is None 

Tag: V00-02-36
2015-04-07 Mikhail S. Dubrovin	
- GenericCalibPars.cpp - set default pixel_bkgd to 0,
- CalibPars.cpp- add map_type2str[PIXEL_BKGD].

Tag: V00-02-35
2015-04-07 Mikhail S. Dubrovin	
- CalibPars, CalibParsStore, GenericCalibPars - add support for calibration types pixel_mask, pixel_bkgd
- CalibParsStore add method Create(... std::string& str_src, ...);
- CalibFileFinder.cpp/h add method trancateSourceName.
- CalibPars, GenericCalibPars add input parameters CALIB_TYPE in methods ndim(.), size(.), shape(.) 

Tag: V00-02-34
2015-03-20 Mikhail S. Dubrovin	
- GeometryObject - delete and make new array pointers only if array size is changing (PSAS-11)
	
2015-03-10 Mikhail S. Dubrovin	
- GeometryAccess - add ref_img_from_pixel_arrays method which returns image as a reference to memeber data (PSAS-11)

Tag: V00-02-33
2015-02-20 Mikhail S. Dubrovin	
- CalibFileFinder.py - in method findCalibFileadd add protection for run numbers > 9999 (PSAS-111)
	
Tag: V00-02-32
2015-02-17 Mikhail S. Dubrovin	
- In GeometryAccess, GeometryObject, SegGeometryMatrixV1 - improve memory management (PSAS-34)
- In GeometryObject add parameter do_eval in get_pixel_coords(...) and evaluate_pixel_coords(...)
